--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,13 @@
     <artifactId>tractor-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>Aws Device Farm Execution Plugin</name>
+    <name>AWS Device Farm Execution Plugin</name>
     <url>https://github.com/metalmynds/tractor-maven-plugin</url>
+    <description>Amazon Device Farm Test Execution and Result Management Plugin</description>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.plugin.version>3.5</maven.plugin.version>
     </properties>
     <repositories>
         <repository>
@@ -53,6 +55,7 @@
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
             <version>3.5</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
@@ -69,10 +72,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.5</version>
+                <version>${maven.plugin.version}</version>
                 <configuration>
                     <goalPrefix>tractor</goalPrefix>
-                    <outputDirectory>target/dir</outputDirectory>
+                    <!--<outputDirectory>target/dir</outputDirectory>-->
                 </configuration>
                 <executions>
                     <execution>
@@ -95,7 +98,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.5</version>
+                <version>${maven.plugin.version}</version>
             </plugin>
         </plugins>
     </reporting>
