--- a/pom.xml
+++ b/pom.xml
@@ -11,50 +11,47 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <compiler.version>1.8</compiler.version>
+        <project.jdk.version>1.8</project.jdk.version>
+        <junit.version>4.12</junit.version>
+        <maven.plugin.annotations.version>3.5</maven.plugin.annotations.version>
         <maven.plugin.version>3.5</maven.plugin.version>
+        <maven.plugin.api.version>3.5.0</maven.plugin.api.version>
+        <aws.sdk.version>1.11.205</aws.sdk.version>
+        <tractor.plugin.version>1.0-SNAPSHOT</tractor.plugin.version>
+        <maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
     </properties>
-    <repositories>
-        <repository>
-            <id>central</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>https://repo1.maven.org/maven2</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>3.5.0</version>
+            <version>${maven.plugin.api.version}</version>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk</artifactId>
-            <version>1.11.205</version>
+            <version>${aws.sdk.version}</version>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-devicefarm</artifactId>
-            <version>1.11.205</version>
+            <version>${aws.sdk.version}</version>
         </dependency>
         <dependency>
             <groupId>io.metalmynds</groupId>
             <artifactId>devicefarm-tractor</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${tractor.plugin.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.5</version>
+            <version>${maven.plugin.annotations.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -63,10 +60,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${compiler.version}</source>
+                    <target>${compiler.version}</target>
                 </configuration>
             </plugin>
             <plugin>
