--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.metalmynds</groupId>
+    <groupId>io.metalmynds.tractor.maven</groupId>
     <artifactId>tractor-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>1.0-SNAPSHOT</version>
     <name>AWS Device Farm Execution Plugin</name>
     <url>https://github.com/metalmynds/tractor-maven-plugin</url>
     <description>Amazon Device Farm Test Execution and Result Management Plugin</description>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <url>https://github.com/metalmynds/tractor-maven-plugin.git</url>
+    </scm>
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <compiler.version>1.8</compiler.version>
-        <project.jdk.version>1.8</project.jdk.version>
+
+        <!-- Dependencies -->
+
         <junit.version>4.12</junit.version>
         <maven.plugin.annotations.version>3.5</maven.plugin.annotations.version>
         <maven.plugin.version>3.5</maven.plugin.version>
@@ -20,6 +29,13 @@
         <aws.sdk.version>1.11.205</aws.sdk.version>
         <tractor.plugin.version>1.0-SNAPSHOT</tractor.plugin.version>
         <maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
+
+        <!-- Build -->
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <compiler.version>1.8</compiler.version>
+
     </properties>
     <dependencies>
         <dependency>
